--- a/src/app/manager/manage-users/manage-users.component.html
+++ b/src/app/manager/manage-users/manage-users.component.html
@@ -1,9 +1,3 @@
-<h2 class="text-center mb-4">Product Management</h2>
-
-<div class="d-flex justify-content-center mb-3 user-select-none">
-  <a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
-</div>
-
 <div class="d-flex justify-content-center w-100 mb-2 user-select-none">
   <mat-form-field appearance="fill" class="w-100" style="max-width: 500px">
     <input
@@ -26,40 +20,47 @@
 
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort>
-    <!-- Title Column -->
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
-      <td mat-cell *matCellDef="let product">{{ product.title }}</td>
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <td mat-cell *matCellDef="let user">{{ user.name }}</td>
     </ng-container>
 
-    <!-- Price Column -->
-    <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
-      <td mat-cell *matCellDef="let product">
-        {{ product.price | currency : "INR" : true }}
+    <!-- Email Column -->
+    <ng-container matColumnDef="email">
+      <th
+        class="laptop-screens"
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+      >
+        Email
+      </th>
+      <td class="laptop-screens" mat-cell *matCellDef="let user">
+        {{ user.email }}
       </td>
     </ng-container>
 
     <!-- Edit Column -->
     <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let product">
+      <td mat-cell *matCellDef="let user">
         <a
           style="text-decoration: none; user-select: none"
           class="text-primary"
-          [routerLink]="['/admin/products/', product.key]"
+          [routerLink]="['/manage-users/', user.key]"
           >Edit</a
         >
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let product; columns: displayedColumns"></tr>
+    <tr mat-row *matRowDef="let user; columns: displayedColumns"></tr>
   </table>
 
   <mat-paginator
     [pageSize]="10"
-    [pageSizeOptions]="[10, 20, 30, 40, 50]"
+    [pageSizeOptions]="[10, 20, 30]"
     class="pb-2"
   ></mat-paginator>
 </div>
