--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -6,26 +6,19 @@
       {{ product.price | currency : "INR" : "symbol" }}
     </p>
   </div>
-  <div class="card-footer">
+  <div *ngIf="shoppingCart" class="card-footer">
     <button
-      *ngIf="getQuantity() === 0; else updateQuantity"
-      (click)="addToCart(product)"
+      *ngIf="shoppingCart.getQuantity(product) === 0; else updateQuantity"
+      (click)="addToCart()"
       class="btn btn-success w-100"
     >
       Add To Cart
     </button>
     <ng-template #updateQuantity>
-      <div class="row g-0">
-        <div class="col-2">
-          <button class="btn btn-danger w-100">-</button>
-        </div>
-        <div class="col d-flex justify-content-center align-items-center">
-          <div>{{ getQuantity() }} in cart</div>
-        </div>
-        <div class="col-2">
-          <button class="btn btn-primary w-100">+</button>
-        </div>
-      </div>
+      <product-quantity
+        [product]="product"
+        [shopping-cart]="shoppingCart"
+      ></product-quantity>
     </ng-template>
   </div>
 </div>
@@ -37,26 +30,19 @@
       <h5 class="card-title">{{ product.title }}</h5>
       <p class="card-text">{{ product.price | currency : "INR" : "symbol" }}</p>
     </div>
-    <div class="card-footer">
+    <div *ngIf="shoppingCart" class="card-footer">
       <button
-        *ngIf="getQuantity() === 0; else updateQuantity"
-        (click)="addToCart(product)"
+        *ngIf="shoppingCart.getQuantity(product) === 0; else updateQuantity"
+        (click)="addToCart()"
         class="btn btn-success w-100"
       >
         Add To Cart
       </button>
       <ng-template #updateQuantity>
-        <div class="row g-0">
-          <div class="col-2">
-            <button class="btn btn-danger w-100">-</button>
-          </div>
-          <div class="col d-flex justify-content-center align-items-center">
-            <div>{{ getQuantity() }} in cart</div>
-          </div>
-          <div class="col-2">
-            <button class="btn btn-primary w-100">+</button>
-          </div>
-        </div>
+        <product-quantity
+          [product]="product"
+          [shopping-cart]="shoppingCart"
+        ></product-quantity>
       </ng-template>
     </div>
   </div>
