--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="col">
-    <div class="row">
+    <div class="row" *ngIf="cart$ | async as cart">
       <ng-container *ngFor="let p of filteredProducts; let i = index">
         <div class="col laptop-screens">
           <product-card [shopping-cart]="cart" [product]="p"></product-card>
@@ -18,9 +18,11 @@
     </div>
   </div>
 
-  <ng-container *ngFor="let p of filteredProducts">
-    <div class="mobile-screens d-flex justify-content-center">
-      <product-card [shopping-cart]="cart" [product]="p"></product-card>
-    </div>
-  </ng-container>
+  <div *ngIf="cart$ | async as cart">
+    <ng-container *ngFor="let p of filteredProducts">
+      <div class="mobile-screens d-flex justify-content-center">
+        <product-card [shopping-cart]="cart" [product]="p"></product-card>
+      </div>
+    </ng-container>
+  </div>
 </div>
