--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,1 +1,49 @@
-<p>shopping-cart works!</p>
+<h1>Shopping Cart</h1>
+<div *ngIf="cart$ | async as cart">
+  <p>You have {{ cart.totalItemsCount }} items in your shopping cart.</p>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Product</th>
+        <th class="text-center" style="width: 230px">Quantity</th>
+        <th class="text-right" style="width: 200px">Price</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of cart.items">
+        <td class="d-flex">
+          <div
+            [style.backgroundImage]="'url(' + item.imageUrl + ')'"
+            class="thumbnail laptop-screens"
+          ></div>
+          <p class="mt-2" style="margin-left: 6px">{{ item.title }}</p>
+        </td>
+        <td class="maxw-400px-none-sml">
+          <product-quantity
+            [product]="item"
+            [shopping-cart]="cart"
+          ></product-quantity>
+        </td>
+        <td class="text-center minw-400px-none-sml">
+          {{ item.quantity }} in cart
+        </td>
+        <td class="text-right">
+          {{ item.totalPrice | currency : "INR" : "symbol" }}
+        </td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <th class="laptop-screens">Total Price</th>
+        <th class="mobile-screens">Total</th>
+        <th></th>
+        <th class="text-right">
+          {{ cart.totalPrice | currency : "INR" : "symbol" }}
+        </th>
+      </tr>
+    </tfoot>
+  </table>
+  <button (click)="clearCart()" class="btn btn-warning btn-sm">
+    Clear Shopping Cart
+  </button>
+</div>
