--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -23,8 +23,8 @@
   </div>
 </div>
 
-<div class="mw-100">
-  <div class="card mb-5 mobile-screens w-100">
+<div class="mobile-screens mw-100">
+  <div class="card mb-5 w-100">
     <img class="card-img-top" [src]="product.imageUrl" [alt]="product.title" />
     <div class="card-body">
       <h5 class="card-title">{{ product.title }}</h5>
