--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -36,7 +36,7 @@
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
       <td mat-cell *matCellDef="let product">
-        {{ product.price | currency : "INR" : true }}
+        {{ product.price | currency : "INR" : "symbol" }}
       </td>
     </ng-container>
 
