--- a/src/app/manager/manage-users/manage-users.component.html
+++ b/src/app/manager/manage-users/manage-users.component.html
@@ -23,7 +23,9 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let user">{{ user.name }}</td>
+      <td mat-cell *matCellDef="let user">
+        {{ user.displayName || user.name }}
+      </td>
     </ng-container>
 
     <!-- Email Column -->
