--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -1,1 +1,9 @@
-<p>check-out works!</p>
+<div class="shipping-form-container" *ngIf="cart$ | async as cart">
+  <div class="w-100">
+    <shipping-form [cart]="cart"></shipping-form>
+  </div>
+
+  <div class="w-100">
+    <shopping-cart-summary [cart]="cart"></shopping-cart-summary>
+  </div>
+</div>
