--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -16,7 +16,7 @@
             [style.backgroundImage]="'url(' + item.imageUrl + ')'"
             class="thumbnail laptop-screens"
           ></div>
-          <p class="mt-2" style="margin-left: 6px">{{ item.title }}</p>
+          <p style="margin-left: 6px">{{ item.title }}</p>
         </td>
         <td class="maxw-400px-none-sml">
           <product-quantity
