--- a/src/app/my-orders/my-orders.component.html
+++ b/src/app/my-orders/my-orders.component.html
@@ -1,1 +1,34 @@
-<p>my-orders works!</p>
+<h2 class="mb-3">My Orders</h2>
+<div>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th class="maxw-400px-none-sml">City</th>
+        <th>Date</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let order of userOrders$ | async">
+        <td>{{ order.shipping.name }}</td>
+        <td class="maxw-400px-none-sml">{{ order.shipping.city }}</td>
+        <td>{{ order.datePlaced | date : "mediumDate" }}</td>
+        <td class="d-flex gap-2">
+          <div>
+            <a
+              class="btn btn-sm btn-primary"
+              [routerLink]="['/order-details/', order.key]"
+              ><i class="bi bi-eye"></i
+            ></a>
+          </div>
+          <div>
+            <a (click)="cancel(order.key)" class="btn btn-sm btn-warning"
+              >Cancel
+            </a>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
