--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <bs-navbar></bs-navbar>
 
-<div class="container" style="padding: 20px;">
+<div class="container" style="padding: 20px; margin-top: 60px">
   <router-outlet></router-outlet>
 </div>
