--- a/src/app/shopping/Components/order-success/order-success.component.html
+++ b/src/app/shopping/Components/order-success/order-success.component.html
@@ -1,1 +1,2 @@
 <h2>Order Placed Successfully</h2>
+<button class="btn btn-success" routerLink="/" style="margin-top: 10px;">Back To Home Page</button>
