New Confirmation Dialog Usage and Some Better Changes

--- a/src/app/manager/Components/manage-users/manage-users.component.html
+++ b/src/app/manager/Components/manage-users/manage-users.component.html
@@ -1,3 +1,4 @@
+<h2 class="text-center mb-3">Users Management</h2>
 <div class="d-flex justify-content-center w-100 mb-2 user-select-none">
   <mat-form-field appearance="fill" class="w-100" style="max-width: 500px">
     <input
