--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,10 +28,19 @@
 
 .custom-snackbar {
   .mdc-snackbar__surface {
-    background-color: rgba(33, 47, 41, 1) !important;
+    background-color: rgb(255, 255, 255) !important;
   }
 
   .mdc-snackbar__label {
-    color: white !important;
+    color: black !important;
+  }
+
+  .mat-mdc-snack-bar-container .mdc-snackbar__surface {
+    border-radius: 16px !important;
+    margin-bottom: 40px !important;
+  }
+
+  .mat-mdc-button.mat-mdc-snack-bar-action {
+    color: #2239bc !important;
   }
 }
