--- a/src/app/shopping/Components/view-order/view-order.component.html
+++ b/src/app/shopping/Components/view-order/view-order.component.html
@@ -39,14 +39,14 @@
             </div>
           </li>
 
-          <li *ngIf="order.voucher?.key" class="list-group-item" style="font-weight: bolder">
+          <li *ngIf="order.voucher" class="list-group-item" style="font-weight: bolder">
             Original Total
             <div style="float: right">
               {{ order.originalTotal | currency : "INR" : "symbol" }}
             </div>
           </li>
 
-          <li *ngIf="order.voucher?.key" class="list-group-item" style="font-weight: bold;">
+          <li *ngIf="order.voucher" class="list-group-item" style="font-weight: bold;">
             Voucher: {{ order.voucher.title }}
             <div style="float: right">
               {{ order.voucher.discountPercent }}%
