--- a/src/app/shopping/Components/shipping-form/shipping-form.component.html
+++ b/src/app/shopping/Components/shipping-form/shipping-form.component.html
@@ -59,10 +59,10 @@
   <div class="form-group">
     <mat-form-field class="w-100">
       <mat-label>Voucher</mat-label>
-      <mat-select (selectionChange)="applyVoucher($event)" #vouch="ngModel" ngModel name="vouch">
-        <mat-option [value]="">None</mat-option>
+      <mat-select (selectionChange)="applyVoucher($event)">
+        <mat-option>None</mat-option>
         <ng-container *ngFor="let voucher of vouchers">
-          <mat-option [value]="voucher">{{voucher.title}}  -  {{voucher.discountPercent}}%</mat-option>
+          <mat-option *ngIf="voucher.validity && voucher.lower_price_limit<cart.originalTotalPrice && voucher.upper_price_limit>=cart.originalTotalPrice" [value]="voucher">{{voucher.title}}  -  {{voucher.discountPercent}}%</mat-option>
         </ng-container>
       </mat-select>
     </mat-form-field>
